--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -24,9 +24,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: 🌱 Learn Anything's Garden
-email: support@thinhvu.com
-author: LEarn Anything
+title: 🌱 Dinh Truong
+email: dtruong46me@gmail.com
+author: Dinh Truong Phan
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
@@ -40,7 +40,7 @@ author: LEarn Anything
 #   "Copyright (c) 2017-{currentYear} <a href="https://example.com">{author}</a>"
 #   "Copyright © 2017-2021 Foobar"
 #
-copyright: "2022-{currentYear} {author}"
+copyright: "2024-{currentYear} {author}"
 
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -48,7 +48,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://learn-anything.online" # the base hostname & protocol for your site, e.g. https://thinh-vu.github.io
+url: "https://dtruong46me.github.io" # the base hostname & protocol for your site, e.g. https://thinh-vu.github.io
 favicon: "" # the favicon for your site
 
 # Yat date format
@@ -85,18 +85,14 @@ translate_langs:
   - lang: vi
     img: https://cdn.countryflags.com/thumbs/vietnam/flag-400.png
     text: Tiếng Việt
+
+  - lang: zh-CN
+    img: https://cdn.countryflags.com/thumbs/china/flag-400.png
+    text: Chinese(Simple)
 #
-#   - lang: fr
-#     img: https://cdn.countryflags.com/thumbs/france/flag-400.png
-#     text: French
-#
-#   - lang: zh-CN
-#     img: https://cdn.countryflags.com/thumbs/china/flag-400.png
-#     text: Chinese(Simple)
-#
-#   - lang: ja
-#     img: https://cdn.countryflags.com/thumbs/japan/flag-400.png
-#     text: Japanese
+  - lang: ja
+    img: https://cdn.countryflags.com/thumbs/japan/flag-400.png
+    text: Japanese
 #
 #   - lang: ko
 #     img: https://cdn.countryflags.com/thumbs/south-korea/flag-400.png
@@ -145,7 +141,7 @@ brand_color: "#04d972" # electric green - slightly darker compared to the origin
 # it will be always kept on every visit (i.e. no matter
 # the browser is closed or not)
 #
-night_mode: "off"
+night_mode: "on"
 
 # Code badge setting
 # You can enable or disable the code badge and so on
@@ -162,8 +158,6 @@ header_pages:
   - categories.html
   - tags.html
   - archives.html
-  - title: Khóa học
-    url: https://learn-anything.vn/
   - about.html
 
 # Page default value
