--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: 🌱 Dinh Truong
+title: Dinh Truong
 email: dtruong46me@gmail.com
-author: Dinh Truong Phan
+author: Dinh-Truong Phan
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
@@ -49,7 +49,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://dtruong46me.github.io" # the base hostname & protocol for your site, e.g. https://thinh-vu.github.io
-favicon: "" # the favicon for your site
+favicon: "../assets/logo/T_v1.png" # the favicon for your site
 
 # Yat date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
