--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://dtruong46me.github.io" # the base hostname & protocol for your site, e.g. https://thinh-vu.github.io
-favicon: "../assets/logo/T_v1.png" # the favicon for your site
+favicon: "../assets/T_v2.png" # the favicon for your site
 
 # Yat date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
