--- a/_config.yml
+++ b/_config.yml
@@ -155,10 +155,11 @@ code_badge:
 # this and add the path to the pages in order as they should show up
 header_pages:
   - index.html
-  - categories.html
+  - projects.html
   - tags.html
   - archives.html
   - about.html
+  - contact.html
 
 # Page default value
 defaults:
