--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ yat:
 content_width: "1200px"
 
 # Google analytics - GA4
-google_analytics: G-T55MBNEVET
+google_analytics: G-J645QTNL68
 # enableDNT: "false"
 
 # If you want to generate website sitemap, you can set true
